--- a/Diploma.html
+++ b/Diploma.html
@@ -114,12 +114,12 @@
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="online-application.html">Online Applications</a></li>
                                         <li>
-                                            <a href="#">Award of
+                                            <a href="award-of-degree.html">Award of
                                                 Degree</a>
                                         </li>
                                         <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                                         <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
-                                        <li><a href="programmes-offered.html">Programmes Offered</a></li>
+                                        <li><a href="#">Programmes Offered</a></li>
                                     </ul>
                                 </li>
 
@@ -172,25 +172,29 @@
     <section class="campus-visit-area" style="margin-top: 120px">
         <div class="container" style="margin-bottom: 20px">
             <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">Award of Degree</h4>
+                <h4 style="margin: 0px 0px 20px -15px">Diploma Programs</h4>
             </div>
             <div class="row justify-content-center">
                 <div class="campus-content-col">
-                    <p>
-                        For B.Tech, M.Tech, B.Arch, all B.S.c and M.S.c , M.A, Arts,Fine-Arts B.com, MBA:
-                        <br>
-                        A student having cleared all the courses and met all the requirements for the award of
-                        degree with
-                        <br><br><br>
-                        <strong> a.</strong> 5.5 ≤ CGPA < 5.75 will be awarded Pass class <br>
-                            <strong> b.</strong> 5.75 ≤
-                            CGPA < 6.75 will be awarded Second-class <br>
-                                <strong>c. </strong> 6.75 ≤ CGPA < 7.75 will be awarded First class <br>
-                                    <strong> d.</strong> CGPA ≥ 7.75 will be awarded First class
-                                    with Distinction provided the student has cleared all the courses in
-                                    first attempt and must have fulfilled all the program requirements in program
-                                    specified minimum years duration.
-                    </p>
+                   
+                    <br>
+                <strong>The Level 3 qualifications improve subject knowledge and study skills, and prepare learners for undergraduate course at Oxford oxford-college.</strong>
+                <br><br>    
+                <li>  <a href="https://www.othm.org.uk/othm-level-3-award-assessing-vocationally-related-achievement.html
+                        ">OTHM Level 3 Award in Assessing Vocationally Related Achievement</a>
+                        </li>
+                    <li> <a href="https://www.othm.org.uk/othm-level-3-diploma-in-business-management.html"  target="_blank">OTHM Level 3 Diploma in Business Management</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-diploma-in-business.html" target="_blank">OTHM Level 3 Diploma in Business Studies</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-diploma-in-fashion-textiles.html" target="_blank">OTHM Level 3 Diploma in Fashion and Textiles</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-foundation-higher-education-studies.html" target="_blank">OTHM Level 3 Foundation Diploma for Higher Education Studies</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-diploma-in-accountancy.html" target="_blank">OTHM Level 3 Foundation Diploma in Accountancy</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-diploma-in-employability-workplace-skills.html" target="_blank">OTHM Level 3 Foundation Diploma in Employability and Workplace Skills</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-diploma-in-engineering.html" target="_blank">OTHM Level 3 Foundation Diploma in Engineering</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-foundation-diploma-health-social-care.html" target="_blank">OTHM Level 3 Foundation Diploma in Health and Social Care</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-diploma-in-information-technology.html" target="_blank"> OTHM Level 3 Foundation Diploma in Information Technology</a></li>
+                    <li><a href="https://www.othm.org.uk/othm-level-3-diploma-in-people-organisations.html" target="_blank"> OTHM Level 3 Foundation Diploma in People and Organisations
+                    </a></li>
+                   
                 </div>
             </div>
         </div>
