--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                   <a href="#">About Us</a>
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="why-oxford.html">Why Oxford</a></li>
-                    <li><a href="study-oxford">Study at Oxford</a></li>
+                    <li><a href="study-oxford">Our Team</a></li>
                   </ul>
                 </li>
 
@@ -123,7 +123,7 @@
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="online-application.html">Online Applications</a></li>
                     <li><a href="award-of-degree.html">Award of Degree</a></li>
-                    <li><a href="--------.html">Rules & Regulations</a></li>
+                    <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                     <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
                     <li><a href="programmes-offered.html">Programmes Offered</a></li>
                   </ul>
@@ -132,7 +132,7 @@
                 <li>
                   <a href="#">Global Connect</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li>
+                    <!-- <li>
                       <a href="--------.html">Offered Programs</a>
                       <ul class="nav-dropdown nav-submenu">
                         <li><a href="diploma.html">Diploma</a></li>
@@ -142,25 +142,25 @@
                         <li><a href="postgraduate.html">Postgraduate</a></li>
                         <li><a href="doctorate.html">Doctorate</a></li>
                       </ul>
-                    </li>
+                    </li> -->
                     <li>
                       <a href="--------.html">Eligibility</a>
                       <ul class="nav-dropdown nav-submenu">
                         <li>
-                          <a href="--------.html">Admissions Procedure</a>
+                          <a href="online-application.html">Admissions Procedure</a>
                         </li>
-                        <li><a href="--------.html">Procedure to Visa</a></li>
+                        <li><a href="procedure-to-vissa.html">Procedure to Visa</a></li>
                       </ul>
                     </li>
                     <li>
                       <a href="--------.html">Campus Life</a>
                       <ul class="nav-dropdown nav-submenu">
-                        <li><a href="--------.html">Inside Campus</a></li>
-                        <li><a href="--------.html">Outside Campus</a></li>
-                        <li><a href="--------.html">Anti Ragging</a></li>
+                        <li><a href="inside-campus.html">Inside Campus</a></li>
+                        <li><a href="out-side-campus.html">Outside Campus</a></li>
+                        <li><a href="Anti-ragging.html">Anti Ragging</a></li>
                       </ul>
                     </li>
-                    <li><a href="--------.html">Internships</a></li>
+                    <li><a href="internship.html">Internships</a></li>
                   </ul>
                 </li>
 
@@ -307,7 +307,7 @@
           </div>
 
           <div class="col-md-4 col-sm-6">
-            <h4 class="quick-links-para-text">Download</h4>
+            <!-- <h4 class="quick-links-para-text">Download</h4>
             <div class="footer-link mt-45">
               <ul class="link-list">
                 <li><a href="">Course</a></li>
@@ -329,7 +329,7 @@
                   <a href="">Safeguarding Oxford</a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
           <div class="col-md-4 col-sm-12">
             <h4 class="quick-links-para-text">Contact Us</h4>
