--- a/gallery.html
+++ b/gallery.html
@@ -94,7 +94,7 @@
                   <a href="#">About Us</a>
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="why-lcm.html">Why Oxford</a></li>
-                    <li><a href="study-lcm">Study at Oxford</a></li>
+                    <li><a href="study-lcm">Our Team</a></li>
                   </ul>
                 </li>
 
@@ -114,7 +114,7 @@
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="online-application.html">Online Applications</a></li>
                     <li><a href="award-of-degree.html">Award of Degree</a></li>
-                    <li><a href="--------.html">Rules & Regulations</a></li>
+                    <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                     <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
                     <li><a href="programmes-offered.html">Programmes Offered</a></li>
                   </ul>
@@ -123,7 +123,7 @@
                 <li>
                   <a href="#">Global Connect</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li>
+                    <!-- <li>
                       <a href="--------.html">Offered Programs</a>
                       <ul class="nav-dropdown nav-submenu">
                         <li><a href="diploma.html">Diploma</a></li>
@@ -133,25 +133,25 @@
                         <li><a href="postgraduate.html">Postgraduate</a></li>
                         <li><a href="doctorate.html">Doctorate</a></li>
                       </ul>
-                    </li>
+                    </li> -->
                     <li>
                       <a href="--------.html">Eligibility</a>
                       <ul class="nav-dropdown nav-submenu">
                         <li>
-                          <a href="--------.html">Admissions Procedure</a>
+                          <a href="online-application.html">Admissions Procedure</a>
                         </li>
-                        <li><a href="--------.html">Procedure to Visa</a></li>
+                        <li><a href="procedure-to-vissa.html">Procedure to Visa</a></li>
                       </ul>
                     </li>
                     <li>
                       <a href="--------.html">Campus Life</a>
                       <ul class="nav-dropdown nav-submenu">
-                        <li><a href="--------.html">Inside Campus</a></li>
-                        <li><a href="--------.html">Outside Campus</a></li>
-                        <li><a href="--------.html">Anti Ragging</a></li>
+                        <li><a href="inside-campus.html">Inside Campus</a></li>
+                        <li><a href="out-side-campus.html">Outside Campus</a></li>
+                        <li><a href="Anti-ragging.html">Anti Ragging</a></li>
                       </ul>
                     </li>
-                    <li><a href="--------.html">Internships</a></li>
+                    <li><a href="internship.html">Internships</a></li>
                   </ul>
                 </li>
 
@@ -236,6 +236,87 @@
             </a>
           </div>
         </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-5.jpeg">
+              <img src="assets/images/gallery/img-5.jpeg" alt="gallery" height="330" width="550">
+            </a>
+
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-6.jpeg">
+              <img src="assets/images/gallery/img-6.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-8.jpeg">
+              <img src="assets/images/gallery/img-8.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-17.jpeg">
+              <img src="assets/images/gallery/img-17.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-18.jpeg">
+              <img src="assets/images/gallery/img-18.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-22.jpeg">
+              <img src="assets/images/gallery/img-22.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-24.jpeg">
+              <img src="assets/images/gallery/img-24.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-19.jpeg">
+              <img src="assets/images/gallery/img-19.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-27.jpeg">
+              <img src="assets/images/gallery/img-27.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-28.jpeg">
+              <img src="assets/images/gallery/img-28.jpeg" alt="gallery" height="330" width="530" />
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-12 col-sm-6 grid-item">
+          <div class="single-gallery mt-30">
+            <a class="image-popup" href="assets/images/gallery/img-25.jpeg">
+              <img src="assets/images/gallery/img-25.jpeg" alt="gallery" height="450" width="1126" />
+            </a>
+         
+          </div>
+        </div>
+
+
       </div>
 
       <!-- <ul class="pagination-items text-center">
@@ -263,15 +344,15 @@
               <ul class="link-list">
                 <li><a href="">History Of The College</a></li>
                 <li><a href="">Photo Galleries</a></li>
-                <li><a href="">Our Policies</a></li>
-                <li><a href="">Work For Us</a></li>
+                <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
+                <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
                 <li><a href="">How To Find Us</a></li>
               </ul>
             </div>
           </div>
 
           <div class="col-md-4 col-sm-6">
-            <h4 class="quick-links-para-text">Download</h4>
+            <!-- <h4 class="quick-links-para-text">Download</h4>
             <div class="footer-link mt-45">
               <ul class="link-list">
                 <li><a href="assets/pdf/LCM%20Courses.pdf">Course</a></li>
@@ -293,7 +374,7 @@
                   <a href="assets/pdf/Safeguarding%20LCM.pdf">Safeguarding Oxford</a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
           <div class="col-md-4 col-sm-12">
             <h4 class="quick-links-para-text">Contact Us</h4>
