--- a/our-team.html
+++ b/our-team.html
@@ -6,14 +6,12 @@
 
     <!--====== Title ======-->
     <title>Oxford College</title>
-    <meta name="keywords" content="" />
-    <link rel="canonical" href="#" />
-    <meta name="robots" content="index, follow" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:title" content="Home | Oxford College" />
+    <meta property="og:title" content="Gallery | Oxford College" />
     <meta property="og:site_name" content="Oxford College" />
-    <meta property="og:url" content="index.html" />
+    <meta property="og:url" content="gallery.html" />
+    <meta property="og:description" content="" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="./assets/images/logo.png" />
 
@@ -37,11 +35,14 @@
     <!--====== Main Style CSS ======-->
     <link rel="stylesheet" href="assets/css/style.css" />
 
+    <!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
+
+    <!-- <link rel="stylesheet" href="assets/css/vendor/plugins.min.css">
+    <link rel="stylesheet" href="assets/css/style.min.css"> -->
 </head>
 
 <body>
     <div class="loader"></div>
-
     <!--====== Header Start ======-->
 
     <header class="header-area">
@@ -93,8 +94,7 @@
                                     <a href="#">About Us</a>
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="why-lcm.html">Why Oxford</a></li>
-                                        <!-- <li><a href="study-lcm">Study at Oxford</a></li> -->
-                                        <li><a href="our-team.html">Our Team</a></li>
+                                        <li><a href="study-lcm">Our Team</a></li>
                                     </ul>
                                 </li>
 
@@ -113,10 +113,7 @@
                                     <a href="#">Academics</a>
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="online-application.html">Online Applications</a></li>
-                                        <li>
-                                            <a href="#">Award of
-                                                Degree</a>
-                                        </li>
+                                        <li><a href="award-of-degree.html">Award of Degree</a></li>
                                         <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                                         <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
                                         <li><a href="programmes-offered.html">Programmes Offered</a></li>
@@ -127,16 +124,16 @@
                                     <a href="#">Global Connect</a>
                                     <ul class="nav-dropdown nav-submenu">
                                         <!-- <li>
-                                            <a href="--------.html">Offered Programs</a>
-                                            <ul class="nav-dropdown nav-submenu">
-                                                <li><a href="diploma.html">Diploma</a></li>
-                                                <li>
-                                                    <a href="undergraduate.html">Undergraduate</a>
-                                                </li>
-                                                <li><a href="postgraduate.html">Postgraduate</a></li>
-                                                <li><a href="doctorate.html">Doctorate</a></li>
-                                            </ul>
-                                        </li> -->
+                      <a href="--------.html">Offered Programs</a>
+                      <ul class="nav-dropdown nav-submenu">
+                        <li><a href="diploma.html">Diploma</a></li>
+                        <li>
+                          <a href="undergraduate.html">Undergraduate</a>
+                        </li>
+                        <li><a href="postgraduate.html">Postgraduate</a></li>
+                        <li><a href="doctorate.html">Doctorate</a></li>
+                      </ul>
+                    </li> -->
                                         <li>
                                             <a href="--------.html">Eligibility</a>
                                             <ul class="nav-dropdown nav-submenu">
@@ -169,32 +166,79 @@
 
     <!--====== Header Ends ======-->
 
-    <section class="campus-visit-area" style="margin-top: 120px">
-        <div class="container" style="margin-bottom: 20px">
-            <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">Award of Degree</h4>
-            </div>
-            <div class="row justify-content-center">
-                <div class="campus-content-col">
-                    <p>
-                        For B.Tech, M.Tech, B.Arch, all B.S.c and M.S.c , M.A, Arts,Fine-Arts B.com, MBA:
-                        <br>
-                        A student having cleared all the courses and met all the requirements for the award of
-                        degree with
-                        <br><br><br>
-                        <strong> a.</strong> 5.5 ≤ CGPA < 5.75 will be awarded Pass class <br>
-                            <strong> b.</strong> 5.75 ≤
-                            CGPA < 6.75 will be awarded Second-class <br>
-                                <strong>c. </strong> 6.75 ≤ CGPA < 7.75 will be awarded First class <br>
-                                    <strong> d.</strong> CGPA ≥ 7.75 will be awarded First class
-                                    with Distinction provided the student has cleared all the courses in
-                                    first attempt and must have fulfilled all the program requirements in program
-                                    specified minimum years duration.
-                    </p>
+    <!--====== Page Banner Start ======-->
+
+    <section class="page-banner">
+        <div class="page-banner-bg bg_cover counter-wrapper-2" style="
+          background-image: url(assets/images/gallery/gallery-banner.jpg);
+          max-height: 30vh;
+        ">
+            <div class="container">
+                <div class="banner-content text-center">
+                    <h2 class="title">Our Team</h2>
                 </div>
             </div>
         </div>
     </section>
+
+    <!--====== Page Banner Ends ======-->
+
+    <!--====== Gallery Start ======-->
+    <div class="gallery-page">
+        <div class="container">
+            <div class="row grid-masonry">
+                <div class="col-lg-6 col-sm-6 grid-item text-center">
+                    <div class="single-gallery mt-30">
+                        <a class="image-popup" href="assets/images/our-team/michel.jpeg">
+                            <img src="assets/images/our-team/michel.jpeg" alt="gallery" height="410" width="340" />
+                        </a>
+                        <div class="desc "><strong> Dr Michael Kanthakaran</strong> <br>
+                            BA, PGD, MBA, DPE, PhD <br>
+                            Project Manager</div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-6 grid-item text-center">
+                    <div class="single-gallery mt-30">
+                        <a class="image-popup" href="assets/images/our-team/hanush (2).jpeg">
+                            <img src="assets/images/our-team/hanush (2).jpeg" alt="gallery" height="410" width="340" />
+                        </a>
+                        <div class="desc "><strong> Dr Hanush Nathani
+                            </strong> <br>
+                            BA, PGD, MBA, DPE <br>
+                            CEO</div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 grid-item text-center">
+                <div class="single-gallery mt-30">
+                    <a class="image-popup" href="assets/images/our-team/Shivam.jpg">
+                        <img src="assets/images/our-team/Shivam.jpg" alt="gallery" height="410" width="340" />
+                    </a>
+                    <div class="desc "><strong>Shivam Jaiswal
+                        </strong> <br>
+                        BTech<br>
+                        IT Admin</div>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
+
+    <!-- <ul class="pagination-items text-center">
+        <li><a class="active" href="#">01</a></li>
+        <li><a href="#">02</a></li>
+        <li><a href="#">03</a></li>
+        <li><a href="#">04</a></li>
+        <li><a href="#">05</a></li>
+      </ul> -->
+
+    </div>
+    </div>
+
+    <!--====== Gallery Ends ======-->
 
     <!--====== Footer Start ======-->
 
@@ -206,7 +250,7 @@
                         <h4 class="quick-links-para-text">Quick Links</h4>
                         <div class="footer-link mt-45">
                             <ul class="link-list">
-                                <li><a href="">History Of The College</a></li>
+                                <li><a href="#history_section">History Of The College</a></li>
                                 <li><a href="gallery.html">Photo Galleries</a></li>
                                 <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
                                 <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
@@ -217,30 +261,28 @@
 
                     <div class="col-md-4 col-sm-6">
                         <!-- <h4 class="quick-links-para-text">Download</h4>
-                        <div class="footer-link mt-45">
-                            <ul class="link-list">
-                                <li><a href="">Course</a></li>
-                                <li>
-                                    <a href="">Center Application
-                                        Form</a>
-                                </li>
-                                <li>
-                                    <a href="">Staff
-                                        Application Form</a>
-                                </li>
-                                <li>
-                                    <a href="">Student
-                                        Training Form</a>
-                                </li>
-                                <li>
-                                    <a href="">Overseas student
-                                        application form</a>
-                                </li>
-                                <li>
-                                    <a href="">Safeguarding Oxford</a>
-                                </li>
-                            </ul>
-                        </div> -->
+            <div class="footer-link mt-45">
+              <ul class="link-list">
+                <li><a href="assets/pdf/LCM%20Courses.pdf">Course</a></li>
+                <li>
+                  <a href="assets/pdf/LCM%20Centre%20Application%20Form.pdf">Center Application Form</a>
+                </li>
+                <li>
+                  <a href="assets/pdf/LCM%20Staff%20Application%20Form%20ORIGINAL%20new.pdf">Staff Application Form</a>
+                </li>
+                <li>
+                  <a href="assets/pdf/LCM%20Student%20Training%20Form%20new.pdf%20form%20new.html">Student Training
+                    Form</a>
+                </li>
+                <li>
+                  <a href="assets/images/LCM_Overseas_Student_Application_Form.doc">Overseas student application
+                    form</a>
+                </li>
+                <li>
+                  <a href="assets/pdf/Safeguarding%20LCM.pdf">Safeguarding Oxford</a>
+                </li>
+              </ul>
+            </div> -->
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <h4 class="quick-links-para-text">Contact Us</h4>
@@ -312,6 +354,7 @@
     </section>
 
     <!--====== Footer Ends ======-->
+
     <!--====== BACK TOP TOP PART START ======-->
 
     <a href="#" class="back-to-top"><i class="fal fa-chevron-up"></i></a>
@@ -325,7 +368,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-">
-
+                    
                 </div>
             </div>
         </div>
@@ -348,43 +391,18 @@
     <script src="assets/js/plugins/isotope.pkgd.min.js"></script>
     <script src="assets/js/plugins/wow.min.js"></script>
     <script src="assets/js/plugins/ajax-contact.js"></script>
+
+    <!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
+
+    <!-- <script src="assets/js/plugin.min.js"></script> -->
+
     <!--====== Main Activation  js ======-->
     <script src="assets/js/main.js"></script>
-    <script>
-        $(document).ready(function () {
-            $(".customer-logos").slick({
-                slidesToShow: 4,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 1000,
-                arrows: false,
-                dots: false,
-                pauseOnHover: false,
-                responsive: [
-                    {
-                        breakpoint: 768,
-                        settings: {
-                            slidesToShow: 4,
-                        },
-                    },
-                    {
-                        breakpoint: 520,
-                        settings: {
-                            slidesToShow: 3,
-                        },
-                    },
-                ],
-            });
-        });
-    </script>
-    <script>
-        $(".loader").fadeOut(2800, function () { });
-    </script>
-
     <div class="loader"></div>
     <script>
         $(".loader").fadeOut(2800, function () { });
     </script>
 </body>
+
 
 </html>
