--- a/procedure-to-vissa.html
+++ b/procedure-to-vissa.html
@@ -114,12 +114,12 @@
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="online-application.html">Online Applications</a></li>
                                         <li>
-                                            <a href="#">Award of
+                                            <a href="award-of-degree.html">Award of
                                                 Degree</a>
                                         </li>
                                         <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                                         <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
-                                        <li><a href="programmes-offered.html">Programmes Offered</a></li>
+                                        <li><a href="#">Programmes Offered</a></li>
                                     </ul>
                                 </li>
 
@@ -172,25 +172,76 @@
     <section class="campus-visit-area" style="margin-top: 120px">
         <div class="container" style="margin-bottom: 20px">
             <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">Award of Degree</h4>
+                <h4 style="margin: 0px 0px 20px -15px">Procedure To Visa</h4>
             </div>
             <div class="row justify-content-center">
                 <div class="campus-content-col">
                     <p>
-                        For B.Tech, M.Tech, B.Arch, all B.S.c and M.S.c , M.A, Arts,Fine-Arts B.com, MBA:
-                        <br>
-                        A student having cleared all the courses and met all the requirements for the award of
-                        degree with
-                        <br><br><br>
-                        <strong> a.</strong> 5.5 ≤ CGPA < 5.75 will be awarded Pass class <br>
-                            <strong> b.</strong> 5.75 ≤
-                            CGPA < 6.75 will be awarded Second-class <br>
-                                <strong>c. </strong> 6.75 ≤ CGPA < 7.75 will be awarded First class <br>
-                                    <strong> d.</strong> CGPA ≥ 7.75 will be awarded First class
-                                    with Distinction provided the student has cleared all the courses in
-                                    first attempt and must have fulfilled all the program requirements in program
-                                    specified minimum years duration.
+                        <strong>(International students who wish to study in India should obtain a Student Visa before travelling 
+                            to India.)</strong>
                     </p>
+                    <br>
+                    <li>Once the student has been issued a provisional admission letter to study at the University, he/she 
+                        should immediately apply for Student Visa.</li>
+                    <li>International students taking admission at Oxford college should make sure that the Student Visa 
+                        is endorsed to Oxford college by the visa issuing authority.</li>
+                    <li>A request for change of university or institution subsequently made cannot be considered. In this 
+                        case you would be required to go back to your home country and apply for a new visa.</li>
+                    <li>Also, if you have entered United Kingdom on basis of documents provided by the University 
+                        then it is your responsibility to ensure that you directly join and report to the University. The 
+                        Visa endorsed on the name of the University or obtained on the basis of University documents 
+                        cannot be used for any other purpose like employment , admission to any other 
+                        university/college/institute/academy etc or for no regular (distance/online) mode of education</li>
+                    <li>After reaching the university students have to get the visa verified by the University and have to 
+                        deposit a copy of the valid visa</li>
+                    <li>It is the responsibility of the student to ensure that throughout his/her study period student is on 
+                        valid visa.
+                        </li>
+                    <li>In case the initial visa is not endorsed for the complete duration of the program or student has to 
+                        extend the stay because he/she is not able to complete the program in the stipulated time then the 
+                        student should apply for the extension of the visa before visa expires.
+                        </li>
+                    <li>It is the responsibility of the student to ensure that visa should be applied well in advance and 
+                        time. It generally takes 3-8 weeks to get the United Kingdom Visa thus it is advisable to apply 
+                        for the visa accordingly and consult the British High Commission/Embassy if required.</li>
+                    <li>When the student is on the rolls of Oxford College, if the passport of the foreign student expires, 
+                        then he/she should arrange to renew it at least six months prior to the date of expiry of the 
+                        passport and Student Visa to be renewed at least three months prior to the date of the expiry of 
+                        the visa.
+                        </li>
+                    <br><br>
+                    <p>
+                        <strong>At the time of starting from your Home Country:</strong>
+                    </p>
+                    <br><br>
+                    <p>The following points will give you a quick look before you depart your home country:
+                    </p>
+                    <br>
+                    <li>Ensure that you obtain visa from British Embassy/ High Commission.
+                    </li>
+                    <li>Also assure that you meet Medical fitness standard before you leave your country</li>
+                    <li>Also assure that you meet Medical fitness standard before you leave your country</li>
+                    <li>If there are certain medicines that you are supposed to consume due to any medical reason 
+                        prescribed by a doctor please carry them along. It is also suggested to carry the prescription of 
+                        that medicine for any further reference.</li>
+                    <li>Request and register with the University International Office for the pick service from the 
+                        Airport at least one week prior to arrival and provide the complete details of flight.</li>
+                    <li>Also ensure that you bring the letter of admission issued by the University.
+                    </li>
+                    <li>Make sure that you carry the originals, copies of your certificates/degrees and 10 passport size 
+                        photographs.</li> 
+                    <li>Ensure that your fee has been received by the University and you should carry the fee receip</li>
+                    <li>You can carry all your money in form of Travellers Cheques, which can be easily redeemed at 
+                        the airport as well as a number of foreign exchange offices and banks.</li>
+                    <li>Keep all the valuables, important documents (Passport, Visa papers) in the Cabin baggage, to 
+                        avoid the possibility of their getting misplaced during transit.</li>
+                    <li>Keep all the contact phone numbers handy in case of need.</li>  
+                    <li>Whilst everything is available in United Kingdom, however try to get all that you would require 
+                        during the initial few days. All the essentials can be availed from the University cooperative 
+                        stores.</li>
+                    <li>So, ensure that you have an adapter for your mobile or laptop if it operates on a different voltage 
+                        in your country. Also the electric sockets are 2 or 3 pin so ensure that you carry a converter in 
+                        case required.</li> 
                 </div>
             </div>
         </div>
@@ -206,7 +257,7 @@
                         <h4 class="quick-links-para-text">Quick Links</h4>
                         <div class="footer-link mt-45">
                             <ul class="link-list">
-                                <li><a href="">History Of The College</a></li>
+                                <li><a href="#history_section">History Of The College</a></li>
                                 <li><a href="gallery.html">Photo Galleries</a></li>
                                 <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
                                 <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
