--- a/programmes-offered.html
+++ b/programmes-offered.html
@@ -93,7 +93,7 @@
                                     <a href="#">About Us</a>
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="why-lcm.html">Why Oxford</a></li>
-                                        <li><a href="study-lcm">Study at Oxford</a></li>
+                                        <!-- <li><a href="study-lcm">Study at Oxford</a></li> -->
                                         <li><a href="our-team.html">Our Team</a></li>
                                     </ul>
                                 </li>
@@ -117,7 +117,7 @@
                                             <a href="award-of-degree.html">Award of
                                                 Degree</a>
                                         </li>
-                                        <li><a href="--------.html">Rules & Regulations</a></li>
+                                        <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                                         <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
                                         <li><a href="#">Programmes Offered</a></li>
                                     </ul>
@@ -126,7 +126,7 @@
                                 <li>
                                     <a href="#">Global Connect</a>
                                     <ul class="nav-dropdown nav-submenu">
-                                        <li>
+                                        <!-- <li>
                                             <a href="--------.html">Offered Programs</a>
                                             <ul class="nav-dropdown nav-submenu">
                                                 <li><a href="diploma.html">Diploma</a></li>
@@ -136,25 +136,25 @@
                                                 <li><a href="postgraduate.html">Postgraduate</a></li>
                                                 <li><a href="doctorate.html">Doctorate</a></li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li>
                                             <a href="--------.html">Eligibility</a>
                                             <ul class="nav-dropdown nav-submenu">
                                                 <li>
-                                                    <a href="--------.html">Admissions Procedure</a>
+                                                    <a href="online-application.html">Admissions Procedure</a>
                                                 </li>
-                                                <li><a href="--------.html">Procedure to Visa</a></li>
+                                                <li><a href="procedure-to-vissa.html">Procedure to Visa</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="--------.html">Campus Life</a>
                                             <ul class="nav-dropdown nav-submenu">
-                                                <li><a href="--------.html">Inside Campus</a></li>
-                                                <li><a href="--------.html">Outside Campus</a></li>
-                                                <li><a href="--------.html">Anti Ragging</a></li>
+                                                <li><a href="inside-campus.html">Inside Campus</a></li>
+                                                <li><a href="out-side-campus.html">Outside Campus</a></li>
+                                                <li><a href="Anti-ragging.html">Anti Ragging</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="--------.html">Internships</a></li>
+                                        <li><a href="internship.html">Internships</a></li>
                                     </ul>
                                 </li>
 
@@ -220,17 +220,17 @@
                         <h4 class="quick-links-para-text">Quick Links</h4>
                         <div class="footer-link mt-45">
                             <ul class="link-list">
-                                <li><a href="">History Of The College</a></li>
+                                <li><a href="#history_section">History Of The College</a></li>
                                 <li><a href="gallery.html">Photo Galleries</a></li>
-                                <li><a href="">Our Policies</a></li>
-                                <li><a href="">Work For Us</a></li>
+                                <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
+                                <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
                                 <li><a href="">How To Find Us</a></li>
                             </ul>
                         </div>
                     </div>
 
                     <div class="col-md-4 col-sm-6">
-                        <h4 class="quick-links-para-text">Download</h4>
+                        <!-- <h4 class="quick-links-para-text">Download</h4>
                         <div class="footer-link mt-45">
                             <ul class="link-list">
                                 <li><a href="">Course</a></li>
@@ -254,7 +254,7 @@
                                     <a href="">Safeguarding Oxford</a>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <h4 class="quick-links-para-text">Contact Us</h4>
