--- a/undergraduate.html
+++ b/undergraduate.html
@@ -114,12 +114,12 @@
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="online-application.html">Online Applications</a></li>
                                         <li>
-                                            <a href="#">Award of
+                                            <a href="award-of-degree.html">Award of
                                                 Degree</a>
                                         </li>
                                         <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                                         <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
-                                        <li><a href="programmes-offered.html">Programmes Offered</a></li>
+                                        <li><a href="#">Programmes Offered</a></li>
                                     </ul>
                                 </li>
 
@@ -172,27 +172,68 @@
     <section class="campus-visit-area" style="margin-top: 120px">
         <div class="container" style="margin-bottom: 20px">
             <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">Award of Degree</h4>
+                <h4 style="margin: 0px 0px 20px -15px">Undergraduate Programs</h4>
             </div>
             <div class="row justify-content-center">
                 <div class="campus-content-col">
-                    <p>
-                        For B.Tech, M.Tech, B.Arch, all B.S.c and M.S.c , M.A, Arts,Fine-Arts B.com, MBA:
-                        <br>
-                        A student having cleared all the courses and met all the requirements for the award of
-                        degree with
-                        <br><br><br>
-                        <strong> a.</strong> 5.5 ≤ CGPA < 5.75 will be awarded Pass class <br>
-                            <strong> b.</strong> 5.75 ≤
-                            CGPA < 6.75 will be awarded Second-class <br>
-                                <strong>c. </strong> 6.75 ≤ CGPA < 7.75 will be awarded First class <br>
-                                    <strong> d.</strong> CGPA ≥ 7.75 will be awarded First class
-                                    with Distinction provided the student has cleared all the courses in
-                                    first attempt and must have fulfilled all the program requirements in program
-                                    specified minimum years duration.
-                    </p>
+
+                    <br>
+                    <strong>The Level 4, 5 and 6 diploma qualifications are equivalent to Year 1, 2 and 3 (Final year)
+                        respectively of a three-year UK Bachelor's degree. Each level consists of 120 credits.
+                        Completing any of the level 4, 5 and
+                        6 qualifications will enable learners a progression to the next level of higher education at UK
+                        universities.</strong>
+                    <br><br><br>
+                    <h6>Year 1 of a Three-year UK Bachelor's degree</h6><br>
+                    <li> <a href="https://www.othm.org.uk/othm-level-3-award-assessing-vocationally-related-achievement.html
+                        ">OTHM Level 4 Diploma in Accounting and Business</a>
+                    </li>
+                    <li><a class="bodyatag" href="othm-level-4-diploma-in-business-management.html">OTHM Level 4 Diploma
+                            in Business Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-4-diploma-in-education-training.html">OTHM Level 4 Diploma
+                            in Education and Training Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-4-diploma-in-health-and-social-care-management.html">OTHM
+                            Level 4 Diploma in Health and Social Care Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-4-diploma-in-information-technology.html">OTHM Level 4
+                            Diploma in Information Technology</a></li>
+                    <li><a class="bodyatag" href="othm-level-4-diploma-in-logistics-supply-chain-management.html">OTHM
+                            Level 4 Diploma in Logistics and Supply Chain Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-4-diploma-in-tourism-and-hospitality-management.html">OTHM
+                            Level 4 Diploma in Tourism and Hospitality Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-4-award-internal-quality-assurance.html">OTHM Level 4 Award
+                            in Internal Quality Assurance of Assessment Processes and Practice</a></li>
+                    <li><a class="bodyatag" href="othm-level-4-award-internal-quality-assurance.html">OTHM Level 4
+                            Certificate in Leading the Internal Quality Assurance of Assessment Processes and
+                            Practice</a></li>
+                    <br><br>
+                    <h6>Year 2 of a Three-year UK Bachelor's degree</h6> <br>
+                    <li><a class="bodyatag" href="othm-level-5-diploma-in-accounting-and-business.html">OTHM Level 5 Diploma in Accounting and Business</a></li>
+                    <li><a class="bodyatag" href="othm-level-5-diploma-in-business-management.html">OTHM Level 5 Diploma in Business Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-5-diploma-in-education-training.html">OTHM Level 5 Diploma in Education and Training</a></li>
+                    <li><a class="bodyatag" href="othm-level-5-diploma-in-health-and-social-care-management.html">OTHM Level 5 Diploma in Health and Social Care Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-5-diploma-in-information-technology.html">OTHM Level 5 Diploma in Information Technology</a></li>
+                    <li><a class="bodyatag" href="othm-level-5-diploma-in-logistics-supply-chain-management.html">OTHM Level 5 Diploma in Logistics and Supply Chain Management</a></li>    
+                    <li><a class="bodyatag" href="othm-level-5-diploma-in-tourism-and-hospitality-management.html">OTHM Level 5 Diploma in Tourism and Hospitality Management</a></li>
+                    <li><a class="bodyatag" href="/othm-level-5-extended-diploma-accounting-business.html">OTHM Level 5 Extended Diploma in Accounting and Business</a></li>
+                    <li><a class="bodyatag" href="othm-level-5-extended-diploma-business-management.html">OTHM Level 5 Extended Diploma in Business Management </a></li>
+                    <li><a class="bodyatag" href="/othm-level-5-extended-diploma-health-social-care-management.html">OTHM Level 5 Extended Diploma in Health and Social Care Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-5-extended-diploma-logistics-supply-chain-management.html">OTHM Level 5 Extended Diploma in Logistics and Supply Chain Management</a></li>   
+                    <li><a class="bodyatag" href="/othm-level-5-extended-diploma-psycholog.html">OTHM Level 5 Extended Diploma in Psychology</a></li>
+                    <li><a class="bodyatag" href="/othm-level-5-extended-diploma-tourism-hospitality-management.html">OTHM Level 5 Extended Diploma in Tourism and Hospitality Management</a></li>
+                    <br><br>
+                    <h6>Year 3 (Final year) of a Three-year UK Bachelor's degree</h6><br>
+                    <li><a class="bodyatag" href="othm-level-6-certificate-academic-professional-skills-development.html">OTHM Level 6 Certificate in Academic and Professional Skills Development</a></li>
+                    <li><a class="bodyatag" href="othm-level-6-diploma-in-accounting-and-business.html">OTHM Level 6 Diploma in Accounting and Business</a></li>
+                    <li><a class="bodyatag" href="othm-level-6-diploma-in-business-management.html">OTHM Level 6 Diploma in Business Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-6-diploma-in-health-and-social-care-management.html">OTHM Level 6 Diploma in Health and Social Care Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-6-diploma-in-information-technology.html">OTHM Level 6 Diploma in Information Technology</a></li>
+                    <li><a class="bodyatag" href="othm-level-6-diploma-in-logistics-supply-chain-management.html">OTHM Level 6 Diploma in Logistics and Supply Chain Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-6-diploma-in-teaching-learning.html">OTHM Level 6 Diploma in Teaching and Learning</a></li>
+                    <li><a class="bodyatag" href="othm-level-6-diploma-in-tourism-and-hospitality-management.html">OTHM Level 6 Diploma in Tourism and Hospitality Management</a></li>
+                <br><br>
                 </div>
             </div>
+            
         </div>
     </section>
 
@@ -206,7 +247,7 @@
                         <h4 class="quick-links-para-text">Quick Links</h4>
                         <div class="footer-link mt-45">
                             <ul class="link-list">
-                                <li><a href="">History Of The College</a></li>
+                                <li><a href="#history_section">History Of The College</a></li>
                                 <li><a href="gallery.html">Photo Galleries</a></li>
                                 <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
                                 <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
