--- a/index.html
+++ b/index.html
@@ -92,17 +92,18 @@
                   <a href="#">About Us</a>
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="why-oxford.html">Why Oxford</a></li>
-                    <li><a href="study-oxford">Study at Oxford</a></li>
+                    <li><a href="our-team.html">Our Team</a></li>
+                    <!-- <li><a href="study-oxford">Study at Oxford</a></li> -->
                   </ul>
                 </li>
 
                 <li>
                   <a href="#">Admissions</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li><a href="https://www.othm.org.uk/qualification.html">Diploma</a></li>
-                    <li><a href="https://www.othm.org.uk/qualification.html">Undergraduate</a></li>
-                    <li><a href="https://www.othm.org.uk/qualification.html">Postgraduate</a></li>
-                    <li><a href="https://www.othm.org.uk/qualification.html">Doctorate</a></li>
+                    <li><a href="Diploma.html">Diploma</a></li>
+                    <li><a href="undergraduate.html">Undergraduate</a></li>
+                    <li><a href="postgraduate.html">Postgraduate</a></li>
+                    <li><a href="doctorate.html">Doctorate</a></li>
                     <li></li>
                   </ul>
                 </li>
@@ -112,7 +113,7 @@
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="online-application.html">Online Applications</a></li>
                     <li><a href="award-of-degree.html">Award of Degree</a></li>
-                    <li><a href="--------.html">Rules & Regulations</a></li>
+                    <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                     <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
                     <li><a href="programmes-offered.html">Programmes Offered</a></li>
                   </ul>
@@ -121,7 +122,7 @@
                 <li>
                   <a href="#">Global Connect</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li>
+                    <!-- <li>
                       <a href="--------.html">Offered Programs</a>
                       <ul class="nav-dropdown nav-submenu">
                         <li><a href="diploma.html">Diploma</a></li>
@@ -131,25 +132,25 @@
                         <li><a href="postgraduate.html">Postgraduate</a></li>
                         <li><a href="doctorate.html">Doctorate</a></li>
                       </ul>
-                    </li>
+                    </li> -->
                     <li>
                       <a href="--------.html">Eligibility</a>
                       <ul class="nav-dropdown nav-submenu">
                         <li>
-                          <a href="--------.html">Admissions Procedure</a>
+                          <a href="online-application.html">Admissions Procedure</a>
                         </li>
-                        <li><a href="--------.html">Procedure to Visa</a></li>
+                        <li><a href="procedure-to-vissa.html">Procedure to Visa</a></li>
                       </ul>
                     </li>
                     <li>
                       <a href="--------.html">Campus Life</a>
                       <ul class="nav-dropdown nav-submenu">
-                        <li><a href="--------.html">Inside Campus</a></li>
-                        <li><a href="--------.html">Outside Campus</a></li>
-                        <li><a href="--------.html">Anti Ragging</a></li>
+                        <li><a href="inside-campus.html">Inside Campus</a></li>
+                        <li><a href="out-side-campus.html">Outside Campus</a></li>
+                        <li><a href="Anti-ragging.html">Anti Ragging</a></li>
                       </ul>
                     </li>
-                    <li><a href="--------.html">Internships</a></li>
+                    <li><a href="internship.html">Internships</a></li>
                   </ul>
                 </li>
 
@@ -173,9 +174,11 @@
       <div class="container">
         <div class="slider-content slider-content-2">
           <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s" style="font-size: 50px">
-            Be Prepared To Choose Wisely, Express Yourself To Succeed In Life.
+            Devotion
+            <br>
+            Service <br> Success
           </h2>
-          <ul class="slider-btn">
+          <!-- <ul class="slider-btn">
             <li>
               <a data-animation="fadeInLeft" data-delay="0.6s" class="main-btn main-btn-2" href="about-us.html">Learn
                 More</a>
@@ -185,7 +188,7 @@
                 target="_blank">Contact
                 Us</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
@@ -195,9 +198,9 @@
       <div class="container">
         <div class="slider-content slider-content-2">
           <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s" style="font-size: 50px">
-            We Are Right Person For Your Educations Teaching
+            Excellence is not a skill. It is an attitude
           </h2>
-          <ul class="slider-btn">
+          <!-- <ul class="slider-btn">
             <li>
               <a data-animation="fadeInLeft" data-delay="0.6s" class="main-btn main-btn-2" href="about-us.html">Learn
                 More</a>
@@ -207,7 +210,7 @@
                 target="_blank">Contact
                 Us</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
@@ -331,37 +334,39 @@
               <ul class="link-list">
                 <li><a href="#history_section">History Of The College</a></li>
                 <li><a href="gallery.html">Photo Galleries</a></li>
-                <li><a href="">Our Policies</a></li>
-                <li><a href="">Work For Us</a></li>
+                <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit"
+                    target="_blank">Our Policies</a></li>
+                <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit"
+                    target="_blank">Work For Us</a></li>
                 <li><a href="">How To Find Us</a></li>
               </ul>
             </div>
           </div>
 
           <div class="col-md-4 col-sm-6">
-            <h4 class="quick-links-para-text">Download</h4>
-            <div class="footer-link mt-45">
-              <ul class="link-list">
-                <li><a href="####">Course</a></li>
-                <li>
-                  <a href="####">Center Application Form</a>
-                </li>
-                <li>
-                  <a href="####">Staff Application Form</a>
-                </li>
-                <li>
-                  <a href="####">Student Training
-                    Form</a>
-                </li>
-                <li>
-                  <a href="####">Overseas student application
-                    form</a>
-                </li>
-                <li>
-                  <a href="####">Safeguarding Oxford</a>
-                </li>
-              </ul>
-            </div>
+            <!-- <h4 class="quick-links-para-text">Download</h4>
+          <div class="footer-link mt-45">
+            <ul class="link-list">
+              <li><a href="####">Course</a></li>
+              <li>
+                <a href="####">Center Application Form</a>
+              </li>
+              <li>
+                <a href="####">Staff Application Form</a>
+              </li>
+              <li>
+                <a href="####">Student Training
+                  Form</a>
+              </li>
+              <li>
+                <a href="####">Overseas student application
+                  form</a>
+              </li>
+              <li>
+                <a href="####">Safeguarding Oxford</a>
+              </li>
+            </ul>
+          </div> -->
           </div>
           <div class="col-md-4 col-sm-12">
             <h4 class="quick-links-para-text">Contact Us</h4>
