--- a/inside-campus.html
+++ b/inside-campus.html
@@ -114,12 +114,12 @@
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="online-application.html">Online Applications</a></li>
                                         <li>
-                                            <a href="#">Award of
+                                            <a href="award-of-degree.html">Award of
                                                 Degree</a>
                                         </li>
                                         <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                                         <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
-                                        <li><a href="programmes-offered.html">Programmes Offered</a></li>
+                                        <li><a href="#">Programmes Offered</a></li>
                                     </ul>
                                 </li>
 
@@ -172,25 +172,28 @@
     <section class="campus-visit-area" style="margin-top: 120px">
         <div class="container" style="margin-bottom: 20px">
             <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">Award of Degree</h4>
+                <h4 style="margin: 0px 0px 20px -15px">Inside Campus</h4>
             </div>
             <div class="row justify-content-center">
                 <div class="campus-content-col">
-                    <p>
-                        For B.Tech, M.Tech, B.Arch, all B.S.c and M.S.c , M.A, Arts,Fine-Arts B.com, MBA:
-                        <br>
-                        A student having cleared all the courses and met all the requirements for the award of
-                        degree with
-                        <br><br><br>
-                        <strong> a.</strong> 5.5 ≤ CGPA < 5.75 will be awarded Pass class <br>
-                            <strong> b.</strong> 5.75 ≤
-                            CGPA < 6.75 will be awarded Second-class <br>
-                                <strong>c. </strong> 6.75 ≤ CGPA < 7.75 will be awarded First class <br>
-                                    <strong> d.</strong> CGPA ≥ 7.75 will be awarded First class
-                                    with Distinction provided the student has cleared all the courses in
-                                    first attempt and must have fulfilled all the program requirements in program
-                                    specified minimum years duration.
-                    </p>
+                   
+                    <br>
+                
+                    <li> At Oxford College, international students are expected to abide by all the rules of the University 
+                        and the code of conduct as applicable to Indian Students doing the same course.
+                        </li>
+                    <li> Any act within the campus that may violate or spoil the academic atmosphere in the University 
+                        will not be appreciated and the student found guilty of such offence will be dismissed and sent 
+                        back to their country without any cost to Oxford College.</li>
+                    <li> The university conduct regulations include such areas as:</li>
+                    <li> Plagiarism, cheating on exams, other dishonesty</li>
+                    <li>  Abuse of electronic resources</li>
+                    <li> Acts or threats involving the safety of others
+                    </li>
+                    <li>Damaging property</li>
+                    <li> Sexual or other harassment</li>
+                    <li> Abuse of alcohol or illicit drugs</li>
+                    <li> Ragging</li>
                 </div>
             </div>
         </div>
