--- a/postgraduate.html
+++ b/postgraduate.html
@@ -114,12 +114,12 @@
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="online-application.html">Online Applications</a></li>
                                         <li>
-                                            <a href="#">Award of
+                                            <a href="award-of-degree.html">Award of
                                                 Degree</a>
                                         </li>
                                         <!-- <li><a href="--------.html">Rules & Regulations</a></li> -->
                                         <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
-                                        <li><a href="programmes-offered.html">Programmes Offered</a></li>
+                                        <li><a href="#">Programmes Offered</a></li>
                                     </ul>
                                 </li>
 
@@ -172,25 +172,35 @@
     <section class="campus-visit-area" style="margin-top: 120px">
         <div class="container" style="margin-bottom: 20px">
             <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">Award of Degree</h4>
+                <h4 style="margin: 0px 0px 20px -15px">Postgraduate Programs</h4>
             </div>
             <div class="row justify-content-center">
                 <div class="campus-content-col">
-                    <p>
-                        For B.Tech, M.Tech, B.Arch, all B.S.c and M.S.c , M.A, Arts,Fine-Arts B.com, MBA:
-                        <br>
-                        A student having cleared all the courses and met all the requirements for the award of
-                        degree with
-                        <br><br><br>
-                        <strong> a.</strong> 5.5 ≤ CGPA < 5.75 will be awarded Pass class <br>
-                            <strong> b.</strong> 5.75 ≤
-                            CGPA < 6.75 will be awarded Second-class <br>
-                                <strong>c. </strong> 6.75 ≤ CGPA < 7.75 will be awarded First class <br>
-                                    <strong> d.</strong> CGPA ≥ 7.75 will be awarded First class
-                                    with Distinction provided the student has cleared all the courses in
-                                    first attempt and must have fulfilled all the program requirements in program
-                                    specified minimum years duration.
-                    </p>
+
+                    <br>
+                    <strong>Postgraduate diplomas are taught courses at level 7 on the Regulated Qualifications
+                        Framework (RQF) - the same level as Masters degrees. However, they are shorter (120 credits) and
+                        learners will have to proceed to the dissertation stage (60 credits) with university to achieve
+                        a full Masters or MBA.</strong>
+                    <br><br>
+                    <li><a class="bodyatag" href="othm-level-7-certificate-in-research-methods.html">OTHM Level 7 Certificate in Research Methods</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-accounting-and-finance.html">OTHM Level 7 Diploma in Accounting and Finance</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-coaching-mentoring.html">
+                        OTHM Level 7 Diploma in Coaching and Mentoring
+                    </a><a class="bodyatag" href="othm-level-7-diploma-in-education-management-and-leadership.html">OTHM Level 7 Diploma in Education Management and Leadership</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-health-and-social-care-management.html">OTHM Level 7 Diploma in Health and Social Care Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-human-resource-management.html">OTHM Level 7 Diploma in Human Resource Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-international-business-law.html">OTHM Level 7 Diploma in International Business Law</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-logistics-and-supply-chain-management.html">OTHM Level 7 Diploma in Logistics and Supply Chain Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-police-leadership-and-management.html">OTHM Level 7 Diploma in Police Leadership and Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-project-management.html">OTHM Level 7 Diploma in Project Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-public-administration.html">OTHM Level 7 Diploma in Public Administration</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-risk-management.html">OTHM Level 7 Diploma in Risk Management</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-strategic-management-and-leadership.html">OTHM Level 7 Diploma in Strategic Management and Leadership</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-strategic-marketing.html">OTHM Level 7 Diploma in Strategic Marketing</a></li>
+                    <li><a class="bodyatag" href="othm-level-7-diploma-in-tourism-and-hospitality-management.html">OTHM Level 7 Diploma in Tourism and Hospitality Management</a></li>
+                    <br><br>
+
                 </div>
             </div>
         </div>
@@ -206,7 +216,7 @@
                         <h4 class="quick-links-para-text">Quick Links</h4>
                         <div class="footer-link mt-45">
                             <ul class="link-list">
-                                <li><a href="">History Of The College</a></li>
+                                <li><a href="#history_section">History Of The College</a></li>
                                 <li><a href="gallery.html">Photo Galleries</a></li>
                                 <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
                                 <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
